<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="action_settings">Settings</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="bill_amount_label">Bill Amount:</string>
    <string name="percent_label">Percent:</string>
    <string name="tip_label">Tip:</string>
    <string name="total_label">Total:</string>
    <string name="percent_view">0.00</string>
    <string name="tip_view">0.00</string>
    <string name="total_view">0.00</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="reset_button">Reset</string>
</resources>
